sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:2: error: Missing closing brace `}' assumed here
def insertionSort() {var v:Int=0; var test:Boolean=false
^AlgInsertionSort:2: error: expected class or object definition
def insertionSort() {var v:Int=0; var test:Boolean=false
^